# MlOpsService

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/models/: model.cbm
backend/src/ml_ops_service/: config.py  main.py
frontend/: .gitignore  Dockerfile  pyproject.toml  ruff.toml
frontend/src/ml_ops_service/: config.py  main.py
frontend/static/: index.html
src/ml_ops_service/: main.py
